--- a/index.ipynb
+++ b/index.ipynb
@@ -245,13 +245,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append(\"\") # add code here"
+    "countries.append(\"Malta\") # add code here"
    ]
   },
   {
@@ -269,7 +267,7 @@
    },
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append() # add code here"
    ]
   },
   {
