automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,7 @@
    },
    "outputs": [],
    "source": [
-    "cou # add code here"
+    "countries[6] = \"USA\" # add code here"
    ]
   },
   {
